updated info.plist to inform the user, why i need to access his data.

--- a/PresentHealthKitData/Info.plist
+++ b/PresentHealthKitData/Info.plist
@@ -27,6 +27,7 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+		<string>The Acitvity Energy is the needed Information to provide your workout targeting.</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
@@ -34,6 +35,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSHealthShareUsageDescription</key>
+	<string>Needed for App</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>Needed for App</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
